# earlyprintv2

./: README.md  db.sqlite3  hello.py  load_json_into_db.py  manage.py  pyproject.toml  requirements.txt
api/: views.py
compress/CACHE/css/: bootstrap.71967226a3d0.css  bootstrap.c682fa3e625c.css  bootstrap.f2a7c08b146d.css  footer.c50fd7562178.css  footer.da0f75856843.css  index.18393db7a0aa.css  index.25021ae9235f.css  index.3a1ec3b68ddd.css  index.448a15297103.css  index.7edff8c17b26.css  index.c6f4cf473771.css  index.cbc7d7bdfe72.css  index.d7eb063e5d51.css  index.f8a6aef78a7a.css  index.f8d1a7b3b033.css
compress/scss/: footer.scss  index.scss
earlyprint/: apps.py  models.py  views.py
earlyprint/migrations/: 0001_initial.py
earlyprint/templates/earlyprint/: index.html  list_json_objects.html  search_results.html  view_json_object.html
earlyprint/templates/earlyprint/partials/: footer.html
earlyprintv2/: asgi.py  settings.py  urls.py  wsgi.py
utils/: xml2json.py
utils/test-data/: B32508.json  B32508.xml
