[project]
name = "earlyprintv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "django-compressor>=4.5.1",
    "django-libsass>=0.9",
    "django-stubs>=5.1.3",
    "django-types>=0.20.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]
